# phosphor-debug-collector

./: .clang-format  .upstream-base-commit  bmc_dump_entry.cpp  bmc_dump_entry.hpp  core_manager.cpp  core_manager.hpp  core_manager_main.cpp  dump_entry.cpp  dump_entry.hpp  dump_manager.hpp  dump_manager_bmc.cpp  dump_manager_bmc.hpp  dump_manager_faultlog.cpp  dump_manager_main.cpp  dump_offload.cpp  dump_serialize.cpp  dump_serialize.hpp  dump_types.mako.hpp  dump_utils.cpp  dump_utils.hpp  elog_watch.cpp  elog_watch.hpp  faultlog_dump_entry.hpp  meson.build  meson.options  meson_options.txt  ramoops_manager.cpp  ramoops_manager_main.cpp  watch.cpp  watch.hpp
create-dump-dbus/: create_dump_dbus.cpp  create_dump_dbus.hpp  main.cpp  meson.build
dump-extensions/: meson.build
dump-extensions/default/: default.cpp
dump-extensions/faultlog-dump/: dump_manager_faultlog.cpp  dump_manager_faultlog.hpp  faultlog-dump-extensions.cpp  faultlog-dump-extensions.hpp  faultlog_dump_entry.cpp  faultlog_dump_entry.hpp  meson.build
dump-extensions/fdr-dump/: dump_manager_fdr.cpp  dump_manager_fdr.hpp  fdr-dump-extensions.cpp  fdr-dump-extensions.hpp  fdr_dump_entry.cpp  fdr_dump_entry.hpp  meson.build
dump-extensions/nvidia-dumps/: dump-extensions.cpp  dump_manager_system.cpp  dump_manager_system.hpp  meson.build  nvidia_dumps_config.hpp  retimer_debug_mode_state.cpp  retimer_debug_mode_state.hpp  system_dump_entry.cpp  system_dump_entry.hpp
dump-extensions/openpower-dumps/: dump-extensions.cpp  dump_manager_resource.cpp  dump_manager_resource.hpp  dump_manager_system.cpp  dump_manager_system.hpp  op_dump_util.cpp  resource_dump_entry.cpp  resource_dump_entry.hpp  system_dump_entry.hpp
host-transport-extensions/pldm/oem/ibm/: pldm_oem_cmds.cpp
nsm-net-dump-tool/: main.cpp  meson.build
subprojects/: sdeventplus.wrap
test/: debug_inif_test.cpp
tools/dreport.d/: dreport  sample.conf
tools/dreport.d/ibm.d/: gendumpheader
tools/dreport.d/include.d/: functions
tools/dreport.d/nvidia.d/common.d/: ManagerReadyInfo  bmcinvdbusinfo  dbuslist  dbusstats  eepromdata  emdbusinfo  gpumngrdbusinfo  lsof  mctpdbusinfo  mctpstats  nsmddbusinfo  pciedevicelist  pldmdbusinfo  servicelist  spdmdbusinfo  usbinfo
tools/dreport.d/nvidia.d/hgx.d/: emmcstatus  fwupdateutils  hgxpcieaer  hgxretimerbootstate  hsc_alert_wrapper_cache  vfiodevicelist
tools/dreport.d/plugins.d/: elogall  journalpretty  previousbootlog  procfd  varfilelist
